<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tracker_pairing"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.neu.ccs.wellness.storytelling.settings.PairTrackerActivity"
    tools:showIn="@layout/activity_pair_tracker"
    android:orientation="vertical">

    <ViewAnimator
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/pairing_view_animator"
        android:layout_gravity="top"
        android:layout_weight="2"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/step1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/firstrun_image_margin"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bluetooth_connecting"
                android:textAlignment="center"
                android:textSize="28sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/step2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/firstrun_image_margin"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bluetooth_send_initial_pairing"
                android:textAlignment="center"
                android:textSize="28sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="bottom"
                android:text="@string/bluetooth_send_initial_pairing_alt"
                android:textAlignment="center"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/step3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/firstrun_image_margin"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bluetooth_auth_successful"
                android:textAlignment="center"
                android:textSize="28sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/step4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/firstrun_image_margin"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bluetooth_pairing_successful"
                android:textAlignment="center"
                android:textSize="28sp" />

        </LinearLayout>
    </ViewAnimator>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:layout_margin="16dp">

        <Button
            android:id="@+id/button_cancel"
            style="@style/AppTheme.SecondaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_primary_button"
            android:text="@string/bluetooth_cancel"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_save"
            style="@style/AppTheme.ActionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_primary_button"
            android:text="@string/bluetooth_save"
            android:visibility="invisible" />

    </LinearLayout>


</LinearLayout>
