<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/AppTheme.ChallengeSelectionView"
    android:background="@color/colorSecondaryLight">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/actionbar_size">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorSecondaryLight"
            android:orientation="vertical"
            android:padding="@dimen/story_text_margin"
            android:theme="@style/AppTheme.Light">

            <TextView
                android:id="@+id/summary_subtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/challenge_summary_info"
                android:textAlignment="center"
                android:fontFamily="@font/storywell_handwriting"
                android:theme="@style/AppTheme.ChallengeSelectionView.subheading" />

            <TextView
                android:id="@+id/summary_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/challenge_summary_title"
                android:fontFamily="@font/storywell_handwriting"
                android:theme="@style/AppTheme.ChallengeSelectionView.superbig"
                android:paddingBottom="@dimen/story_text_margin" />

            <TextView
                android:id="@+id/summary_subtext2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/challenge_summary_subtitle"
                android:fontFamily="@font/storywell_handwriting"
                android:theme="@style/AppTheme.ChallengeSelectionView.subheading"
                android:paddingBottom="@dimen/story_text_margin" />

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_size"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/summary_buttonNext"
                android:layout_width="@dimen/actionbar_button_size"
                android:layout_height="@dimen/actionbar_button_size"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_margin="4dp"
                android:background="@drawable/round_button_hot"
                android:elevation="10dp"
                android:src="@drawable/ic_round_balloons_48px"
                android:textColor="@color/colorAccentText"
                android:tint="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/textPlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/summary_buttonNext"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/storywell_handwriting"
                android:text="@string/challenge_summary_button_label"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textAlignment="center"/>
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>