<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/AppTheme.ChallengeSelectionView"
    android:background="@color/storyViewChallenge">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/actionbar_size">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/story_text_margin"
            android:theme="@style/AppTheme.Light">

            <TextView
                android:id="@+id/info_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/challenge_info_title"
                android:fontFamily="@font/storywell_handwriting"
                android:theme="@style/AppTheme.ChallengeSelectionView.heading"
                android:paddingBottom="@dimen/story_text_margin" />

            <TextView
                android:id="@+id/info_subtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/challenge_info_subtitle"
                android:fontFamily="@font/storywell_handwriting"
                android:theme="@style/AppTheme.ChallengeSelectionView.subheading"
                android:paddingBottom="@dimen/story_text_margin" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_size"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="@dimen/actionbar_padding"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/info_buttonNext"
            android:layout_width="@dimen/actionbar_button_size"
            android:layout_height="@dimen/actionbar_button_size"
            android:textColor="@color/colorAccentText"
            android:background="@drawable/round_button_hot"
            android:text="@string/challenge_button_next"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/storywell_handwriting"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />


    </RelativeLayout>


</RelativeLayout>